client/styles/blog.css
.admin-post-list {
    list-style: none;
}

.admin-post {
    position: relative;
    padding-right: 250px;
}

.admin-post h3 {
    margin: 0;
}

.admin-post-actions {
    position: absolute;
    right: 19px;
    top: 15px;
}

.post-editor h2 {
    margin: 0;
    height: 40px;
}

.post-editor-codemirror, .post-editor-preview {
    height: 440px;
    padding: 0;
}

.post-editor-preview {
    padding-left: 15px;
}

.post-editor-codemirror {
    border-right: 1px solid #ddd;
}

.post-editor-codemirror .CodeMirror {
    height: 400px;
}

.post-editor-preview-content {
    height: 400px;
    overflow-y: auto;
}

.post {
    padding-bottom: 15px;
    margin-bottom: 15px;
    border-bottom: 1px solid #ddd;
}

